# uptime-monitoring-service

mysqldb/: Dockerfile  pyproject.toml
mysqldb/src/mysqldb/: main.py
mysqldb/src/mysqldb/api/routers/: items.py
mysqldb/src/mysqldb/config/: database.py  settings.py
mysqldb/src/mysqldb/crud/: crud_item.py
mysqldb/src/mysqldb/models/: models_item.py
mysqldb/src/mysqldb/schemas/: item_schema.py
